fix(styles): improve readability.
- Re-use btn-cta in prefooter. Colour had to be replace
in order to achieve better contrast in all usages.
- Resize prefooter to make it consistent with footer.
- Update text colours in footer for better contrast.
- Fix issue where all ctas has display none in mobile.
- Update text colour for paragraphs to improve readability

--- a/assets/css/about.module.css
+++ b/assets/css/about.module.css
@@ -42,7 +42,6 @@
 
 .textContent {
   padding: 20px;
-  color: var(--text-light-color);
   line-height: 1.8;
   font-size: 18px;
 }
