--- a/assets/css/homepage.module.css
+++ b/assets/css/homepage.module.css
@@ -20,7 +20,6 @@
 }
 
 .hero-subtitle {
-  color: var(--text-light-color);
   font-weight: 400;
 }
 
@@ -32,7 +31,6 @@
 .solutions-section {
   border-radius: 24px;
   text-align: center;
-  color: white;
   overflow: hidden;
   padding: 56px;
   margin: 56px;
@@ -145,7 +143,6 @@
 }
 
 .link {
-  color: black;
   padding: 8px;
   border-radius: 3px;
   background-color: var(--secondary-color);
@@ -185,7 +182,6 @@
 
 .differentiator-description {
   line-height: 1.6;
-  color: #e0e7ff;
 }
 
 @media (max-width: 978px) {
