--- a/assets/css/servicePageTemplate.module.css
+++ b/assets/css/servicePageTemplate.module.css
@@ -1,8 +1,3 @@
-.heroServiceName,
-.heroSubTitle {
-  color: #e2e2e2;
-}
-
 .grid {
   display: grid;
   margin-top: 30px;
